# smas

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
agdd/: __init__.py
agdd/observability/: __init__.py  logger.py
agdd/runners/: __init__.py  agent_runner.py
catalog/agents/main/ssot-manager-mag/: README.md  agent.yaml
catalog/agents/main/ssot-manager-mag/code/: orchestrator.py
catalog/agents/sub/content-retriever-sag/: README.md  agent.yaml
catalog/agents/sub/content-retriever-sag/code/: retriever.py
catalog/agents/sub/content-updater-sag/: README.md  agent.yaml
catalog/agents/sub/content-updater-sag/code/: updater.py
catalog/agents/sub/content-validator-sag/: README.md  agent.yaml
catalog/agents/sub/content-validator-sag/code/: validator.py
catalog/agents/sub/crossref-analyzer-sag/: README.md  agent.yaml
catalog/agents/sub/crossref-analyzer-sag/code/: analyzer.py
catalog/agents/sub/taxonomy-manager-sag/: README.md  agent.yaml
catalog/agents/sub/taxonomy-manager-sag/code/: taxonomy.py
catalog/api/: __init__.py  models.py  server.py  utils.py
catalog/api/routes/: agdd.py  execute.py  webhooks.py
catalog/contracts/: content_answer.schema.json  content_query.schema.json  crossref_result.schema.json  ssot_request.schema.json  ssot_response.schema.json  taxonomy_request.schema.json  taxonomy_result.schema.json  update_request.schema.json  update_result.schema.json  validation_request.schema.json  validation_result.schema.json
catalog/registry/: agents.yaml
docs/: API.md
examples/: README.md  analyze_example.json  query_example.json  validate_example.json
tests/: conftest.py
tests/agents/: test_content_retriever_sag.py  test_content_updater_sag.py  test_content_validator_sag.py  test_crossref_analyzer_sag.py  test_ssot_manager_mag.py  test_taxonomy_manager_sag.py
