[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssot-manager"
version = "0.1.0"
description = "SSOT Manager - AI agent system for managing the SSOT repository using the AGDD framework."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Artificial Intelligence First"}
]
dependencies = [
  "pydantic>=1.10,<3.0",
  "uvicorn>=0.24",
  "rich>=13.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "pytest-mock>=3.12",
  "pytest-cov>=4.1",
  "mypy>=1.8",
  "ruff>=0.4"
]

[tool.agdd]
default_registry = "catalog/registry/agents.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["catalog*", "agdd*"]
exclude = ["external*"]
